# claude-code-notify

./: .gitignore  README.md  pyproject.toml
hooks/: notify.sh
server/: config.py  main.py  push.py  store.py
static/: app.js  index.html  manifest.json  style.css  sw.js
